feat: db 변경에 따라 코드 수정 #21